--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -8,8 +8,7 @@
     <ImageView
         android:id="@+id/iv_movie_poster"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:layout_height="match_parent" />
 
     <View
         android:id="@+id/shadow"
@@ -58,17 +57,22 @@
     <TextView
         android:id="@+id/tv_movie_name"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginBottom="56dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
+        android:ellipsize="end"
         android:fontFamily="sans-serif-medium"
+        android:gravity="left|bottom"
+        android:maxLines="3"
         android:textColor="#ffffff"
         android:textSize="48sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Темные времена" />
 
 </android.support.constraint.ConstraintLayout>
