--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="236dp">
 
-    <ImageView
+    <com.source.subscity.widgets.PosterImageView
         android:id="@+id/iv_movie_poster"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -67,7 +67,7 @@
         android:gravity="left|bottom"
         android:maxLines="3"
         android:textColor="#ffffff"
-        android:textSize="48sp"
+        android:textSize="24sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
