--- a/app/src/main/res/layout/item_cinema.xml
+++ b/app/src/main/res/layout/item_cinema.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:textColor="#000000"
+        android:textColor="@color/title_color"
         android:textSize="24sp"
         android:textStyle="normal"
         tools:text="Формула Кино Галерея" />
