--- a/app/src/main/res/drawable/movie_shadow_background.xml
+++ b/app/src/main/res/drawable/movie_shadow_background.xml
@@ -4,6 +4,6 @@
 
     <gradient
         android:angle="90"
-        android:endColor="#0333"
+        android:endColor="#29333333"
         android:startColor="#000" />
 </shape>
