--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="title_color">#000000</color>
     <color name="subtitle_color">#8A000000</color>
 
+    <color name="setting_bg_color">#42642957</color>
+
     <!-- St. Petersburg Metro -->
     <color name="metro_spb_line_1">#d51c36</color>
     <color name="metro_spb_line_2">#197dce</color>
