--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">@color/primary_color</color>
+    <color name="colorPrimaryDark">@color/primary_dark_color</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="primary_color">#642957</color>
+    <color name="primary_dark_color">#4F2045</color>
     <color name="title_color">#000000</color>
     <color name="subtitle_color">#8A000000</color>
-
+    <color name="inactive_color">#a9aeb2</color>
+    <color name="white_color">#FFFFFF</color>
     <color name="setting_bg_color">#42642957</color>
 
     <!-- St. Petersburg Metro -->
