--- a/app/src/main/res/drawable-v21/setting_item_bg.xml
+++ b/app/src/main/res/drawable-v21/setting_item_bg.xml
@@ -1,12 +1,8 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/setting_bg_color">
-    <item>
-        <selector>
-            <item>
-                <shape android:shape="rectangle">
-                    <solid android:color="@android:color/white" />
-                </shape>
-            </item>
-        </selector>
+    android:color="@color/primary_color_24">
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/white" />
+        </shape>
     </item>
 </ripple>
