--- a/app/src/main/res/drawable/setting_item_bg.xml
+++ b/app/src/main/res/drawable/setting_item_bg.xml
@@ -1,12 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/setting_bg_color" />
-        </shape>
-    </item>
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/white" />
+            <solid android:color="@color/primary_color_16" />
         </shape>
     </item>
 </selector>
