--- a/app/src/main/res/layout/item_cinema.xml
+++ b/app/src/main/res/layout/item_cinema.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/selectable_item_bg"
     android:minHeight="96dp"
     android:orientation="vertical"
     android:padding="16dp">
