--- a/app/src/main/res/drawable/cinema_divider.xml
+++ b/app/src/main/res/drawable/cinema_divider.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:shape="rectangle"
-    tools:ignore="ResourceName">
+    android:shape="rectangle">
     <size android:height="0.3dp" />
-    <solid android:color="#9e9e9e" />
+    <solid android:color="@color/divider_color" />
 </shape>
