--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="inactive_color">#a9aeb2</color>
     <color name="white_color">#FFFFFF</color>
     <color name="setting_bg_color">#42642957</color>
+    <color name="divider_color">#9e9e9e</color>
 
     <!-- St. Petersburg Metro -->
     <color name="metro_spb_line_1">#d51c36</color>
