--- a/app/src/main/res/layout/item_cinema_info.xml
+++ b/app/src/main/res/layout/item_cinema_info.xml
@@ -36,9 +36,10 @@
         tools:textColor="#d51c36" />
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/ll_cinema_map"
+        android:id="@+id/cl_cinema_map"
         android:layout_width="64dp"
         android:layout_height="0dp"
+        android:background="@drawable/selectable_item_bg"
         app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -64,6 +65,7 @@
             android:layout_marginTop="2dp"
             android:alpha="0.54"
             android:fontFamily="sans-serif"
+            android:text="@string/cinema_point_on_map"
             android:textColor="#000000"
             android:textSize="12sp"
             android:textStyle="normal"
@@ -71,15 +73,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_map"
-            tools:text="На карте" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_map" />
 
     </android.support.constraint.ConstraintLayout>
 
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="1dp"
         android:layout_marginTop="64dp"
         android:background="@color/divider_color"
         app:layout_constraintBottom_toBottomOf="parent"
