--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">@color/primary_color</color>
     <color name="colorPrimaryDark">@color/primary_dark_color</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">@color/primary_color</color>
 
     <color name="black_color">#000000</color>
     <color name="black_color_16">#29000000</color>
