--- a/app/src/main/res/layout/item_movie_date_picker.xml
+++ b/app/src/main/res/layout/item_movie_date_picker.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/movie_sessions_title"
+        android:text="@string/movie_sreenings_title"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="normal"
@@ -30,6 +30,7 @@
         android:textColor="#000000"
         android:textSize="12sp"
         android:textStyle="normal"
+        android:visibility="gone"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_sessions_title"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="Четверг, 27 февраля" />
