--- a/app/src/main/res/layout/item_divider_title.xml
+++ b/app/src/main/res/layout/item_divider_title.xml
@@ -10,29 +10,16 @@
     android:paddingTop="8dp">
 
     <TextView
-        android:id="@+id/tv_sessions_title"
+        android:id="@+id/tv_divider_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/movie_sreenings_title"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_date_sessions_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:textColor="#000000"
-        android:textSize="12sp"
-        android:textStyle="normal"
-        android:visibility="gone"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_sessions_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="Четверг, 27 февраля" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/movie_screenings_title" />
 
 </android.support.constraint.ConstraintLayout>
