--- a/app/src/main/res/layout/fragment_city.xml
+++ b/app/src/main/res/layout/fragment_city.xml
@@ -27,6 +27,7 @@
         android:id="@+id/rv_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:clipToPadding="false"
         android:paddingTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
