Add buying ticket on web

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="black_color_24">#3d000000</color>
 
     <color name="primary_color">#642957</color>
+    <color name="primary_color_8">#14642957</color>
     <color name="primary_color_16">#29642957</color>
     <color name="primary_color_24">#3d642957</color>
 
