--- a/app/src/main/res/layout/item_screening.xml
+++ b/app/src/main/res/layout/item_screening.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="56dp"
     android:layout_height="56dp"
-    android:background="@color/primary_color">
+    android:background="@drawable/screening_item_bg">
 
     <TextView
         android:id="@+id/tv_screening_date"
@@ -13,7 +13,7 @@
         android:layout_marginTop="4dp"
         android:alpha="0.87"
         android:fontFamily="sans-serif"
-        android:textColor="#ffffff"
+        android:textColor="@color/screening_text_color"
         android:textSize="12sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,8 +27,7 @@
         android:layout_height="wrap_content"
         android:alpha="0.87"
         android:fontFamily="sans-serif"
-        android:text="21:05"
-        android:textColor="#ffffff"
+        android:textColor="@color/screening_text_color"
         android:textSize="12sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,8 +42,7 @@
         android:layout_marginBottom="4dp"
         android:alpha="0.54"
         android:fontFamily="sans-serif"
-        android:text="300₽"
-        android:textColor="#ffffff"
+        android:textColor="@color/screening_text_color"
         android:textSize="11sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
