--- a/app/src/main/res/menu/menu_cinema.xml
+++ b/app/src/main/res/menu/menu_cinema.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/item_map_cinema"
-        android:icon="@drawable/ic_map"
+        android:icon="@drawable/ic_menu_map"
         android:title="@string/cinemas_map_menu"
         app:showAsAction="always" />
 
