--- a/app/src/main/res/layout/item_screening.xml
+++ b/app/src/main/res/layout/item_screening.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:alpha="0.54"
-        android:fontFamily="sans-serif"
+        android:fontFamily="sans-serif-light"
         android:textColor="@color/screening_text_color"
         android:textSize="12sp"
         android:textStyle="normal"
