--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,4 +29,21 @@
     <color name="metro_spb_line_5">#6c0b78</color>
     <color name="metro_spb_line_6">#8d5b2f</color>
 
+    <!-- Moscow Metro -->
+    <color name="metro_msk_line_1">#e32213</color>
+    <color name="metro_msk_line_2">#4eae4f</color>
+    <color name="metro_msk_line_3">#0072b9</color>
+    <color name="metro_msk_line_4">#04baee</color>
+    <color name="metro_msk_line_5">#905133</color>
+    <color name="metro_msk_line_6">#ef7e23</color>
+    <color name="metro_msk_line_7">#933d8e</color>
+    <color name="metro_msk_line_8">#ffcc1b</color>
+    <color name="metro_msk_line_9">#adabab</color>
+    <color name="metro_msk_line_10">#bdd02b</color>
+    <color name="metro_msk_line_11">#86cbce</color>
+    <color name="metro_msk_line_12">#b9c7e7</color>
+    <color name="metro_msk_line_13">#2C74C5</color>
+    <color name="metro_msk_line_14">#FFA8AF</color>
+    <color name="metro_msk_line_15">#4FA6A4</color>
+
 </resources>
