--- a/app/src/main/res/drawable-v23/splash_bg.xml
+++ b/app/src/main/res/drawable-v23/splash_bg.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/primary_color" />
-    <item
-        android:drawable="@drawable/ic_splash"
-        android:gravity="center" />
+    <!--<item-->
+        <!--android:drawable="@drawable/ic_splash"-->
+        <!--android:gravity="center" />-->
     <item
         android:drawable="@drawable/ic_splash_logo"
         android:gravity="center" />
