--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -33,7 +33,7 @@
         android:fontFamily="sans-serif"
         android:text="@string/about_info"
         android:textColor="#000000"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,10 @@
         android:id="@+id/tv_social_network_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/about_social_networks"
         android:textColor="#000000"
@@ -52,21 +55,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_about" />
 
-    <TextView
-        android:id="@+id/tv_subscribe"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="sans-serif"
-        android:text="@string/about_subscribe"
-        android:textColor="#000000"
-        android:textSize="14sp"
-        android:textStyle="normal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_social_network_title" />
+    <!--<TextView-->
+    <!--android:id="@+id/tv_subscribe"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginLeft="16dp"-->
+    <!--android:layout_marginRight="16dp"-->
+    <!--android:layout_marginTop="8dp"-->
+    <!--android:fontFamily="sans-serif"-->
+    <!--android:text="@string/about_subscribe"-->
+    <!--android:textColor="#000000"-->
+    <!--android:textSize="14sp"-->
+    <!--android:textStyle="normal"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/tv_social_network_title" />-->
 
     <Button
         android:id="@+id/bt_telegram"
@@ -103,7 +106,7 @@
         app:layout_constraintEnd_toStartOf="@+id/bt_fb"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/bt_telegram"
-        app:layout_constraintTop_toBottomOf="@+id/tv_subscribe"
+        app:layout_constraintTop_toBottomOf="@+id/tv_social_network_title"
         tools:targetApi="lollipop" />
 
     <Button
