OfferActivity is disabled. Add styles for AboutActivity

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -25,49 +25,40 @@
 
     <TextView
         android:id="@+id/tv_about"
+        style="@style/AppTheme.TextView.Large.Black"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif"
         android:text="@string/about_info"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_bar" />
 
     <TextView
         android:id="@+id/tv_about_tickets"
+        style="@style/AppTheme.TextView.Large.Black"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:text="@string/about_info_tickets"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="10dp"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        android:textStyle="normal"
+        android:text="@string/about_info_tickets"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_about" />
 
     <TextView
         android:id="@+id/tv_social_network_title"
+        style="@style/AppTheme.TextView.ExtraLarge.Black.Bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="sans-serif-medium"
         android:text="@string/about_social_networks"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:textStyle="normal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_about_tickets" />
 
@@ -89,16 +80,11 @@
 
     <Button
         android:id="@+id/bt_telegram"
+        style="@style/AppTheme.Button.SocialNetwork"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/telegram_bg"
-        android:fontFamily="sans-serif"
-        android:stateListAnimator="@null"
         android:text="@string/about_telegram"
-        android:textAllCaps="false"
-        android:textColor="#ffffff"
-        android:textSize="16sp"
-        android:textStyle="normal"
         app:layout_constraintEnd_toStartOf="@+id/bt_vk"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -108,17 +94,12 @@
 
     <Button
         android:id="@+id/bt_vk"
+        style="@style/AppTheme.Button.SocialNetwork"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/vkontakte_bg"
-        android:fontFamily="sans-serif"
-        android:stateListAnimator="@null"
         android:text="@string/about_vkontakte"
-        android:textAllCaps="false"
-        android:textColor="#ffffff"
-        android:textSize="16sp"
-        android:textStyle="normal"
         app:layout_constraintEnd_toStartOf="@+id/bt_fb"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/bt_telegram"
@@ -127,16 +108,11 @@
 
     <Button
         android:id="@+id/bt_fb"
+        style="@style/AppTheme.Button.SocialNetwork"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/facebook_bg"
-        android:fontFamily="sans-serif"
-        android:stateListAnimator="@null"
         android:text="@string/about_facebook"
-        android:textAllCaps="false"
-        android:textColor="#ffffff"
-        android:textSize="16sp"
-        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/bt_vk"
@@ -145,12 +121,10 @@
 
     <Button
         android:id="@+id/bt_review"
+        style="@style/AppTheme.Button.Accent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/review_bg"
-        android:stateListAnimator="@null"
         android:text="@string/about_review"
-        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
