--- a/app/src/main/res/layout/item_cinema_info.xml
+++ b/app/src/main/res/layout/item_cinema_info.xml
@@ -7,13 +7,10 @@
 
     <TextView
         android:id="@+id/tv_cinema_address"
+        style="@style/AppTheme.TextView.Medium.Black.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/subtitle_color"
-        android:textSize="14sp"
-        android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/tv_cinema_metro_station"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,13 +19,10 @@
 
     <TextView
         android:id="@+id/tv_cinema_metro_station"
+        style="@style/AppTheme.TextView.Medium.Black.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/subtitle_color"
-        android:textSize="14sp"
-        android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintStart_toStartOf="@+id/tv_cinema_address"
         app:layout_constraintTop_toBottomOf="@+id/tv_cinema_address"
