--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,7 +24,8 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@drawable/splash_bg</item>
-        <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/colorPrimary</item>
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/colorPrimary
+        </item>
     </style>
 
     <style name="AppTheme.YouTube" parent="AppTheme.NoActionBar">
@@ -33,5 +34,58 @@
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.Button.SocialNetwork" parent="Widget.AppCompat.Button">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white_color</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:stateListAnimator" tools:targetApi="lollipop">@null</item>
+    </style>
+
+    <style name="AppTheme.Button.Accent" parent="Widget.AppCompat.Button">
+        <item name="android:textColor">@color/white_color</item>
+        <item name="android:stateListAnimator" tools:targetApi="lollipop">@null</item>
+        <item name="android:background">@drawable/review_bg</item>
+    </style>
+
+    <style name="AppTheme.TextView" parent="TextAppearance.AppCompat">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="AppTheme.TextView.Medium">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="AppTheme.TextView.Large">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="AppTheme.TextView.ExtraLarge">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="AppTheme.TextView.Medium.Black">
+        <item name="android:textColor">@color/black_color</item>
+    </style>
+
+    <style name="AppTheme.TextView.Medium.Black.Subtitle">
+        <item name="android:textColor">@color/subtitle_color</item>
+    </style>
+
+    <style name="AppTheme.TextView.Large.Black">
+        <item name="android:textColor">@color/black_color</item>
+    </style>
+
+    <style name="AppTheme.TextView.ExtraLarge.Black">
+        <item name="android:textColor">@color/black_color</item>
+    </style>
+
+    <style name="AppTheme.TextView.ExtraLarge.Black.Bold">
+        <item name="android:fontFamily">sans-serif-medium</item>
+    </style>
+
 
 </resources>
