--- a/app/src/main/res/layout/item_cinema.xml
+++ b/app/src/main/res/layout/item_cinema.xml
@@ -10,32 +10,23 @@
 
     <TextView
         android:id="@+id/tv_cinema_name"
+        style="@style/AppTheme.TextView.ExtraHuge.Black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/title_color"
-        android:textSize="24sp"
-        android:textStyle="normal"
         tools:text="Формула Кино Галерея" />
 
     <TextView
         android:id="@+id/tv_cinema_address"
+        style="@style/AppTheme.TextView.Medium.Black.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/subtitle_color"
-        android:textSize="14sp"
-        android:textStyle="normal"
         tools:text="Мал.Морская, 24" />
 
     <TextView
         android:id="@+id/tv_cinema_metro_station"
+        style="@style/AppTheme.TextView.Medium.Black.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/subtitle_color"
-        android:textSize="14sp"
-        android:textStyle="normal"
         tools:text="м. Адмиралтейская" />
 
 
